Fullscreen fixed (except on IE, womp womp)

--- a/src/app/storymaps/maptour/ui/desktop/CentricView.css
+++ b/src/app/storymaps/maptour/ui/desktop/CentricView.css
@@ -155,10 +155,6 @@
 	top: 10px;
 }
 
-#largeImageContainer .btn-fullscreen{
-	visibility: hidden;
-}
-
 #largeImageContainer .landscapeContent .largeImageAppTitleArea{
 	display: none;
 	position: absolute;
